--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello Coursera</title>
 </head>
+<style>
+    h1{
+        color: red;
+    }
+</style>
 <body>
-    <h1>Hello Coursera</h1>
+    <h1>Hello Salma  </h1>
 </body>
 </html>
